<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <RelativeLayout
        android:id="@+id/user_data_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/user_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/profile_image"
            android:text="@string/example_user"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/post_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_data_container"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/contents_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/post_counter_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contents_post"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/post_reactions_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/description"
                android:src="@drawable/ic_baseline_favorite_24" />

            <TextView
                android:id="@+id/post_reactions_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/post_reactions_image"
                android:text="@string/_4"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/post_comments_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/_4_comments" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/post_actions_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_counter_container"
            android:gravity="center">

            <Button
                android:id="@+id/button_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_favorite_24"
                android:text="@string/like"
                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp"/>

            <Button
                android:id="@+id/button_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_favorite_24"
                android:text="@string/comment"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>